--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1 id="h1">Testo Da Mandare</h1>
+    <h1 id="random_pass">Testo da restituire</h1>
 
     <script type="text/javascript" src="./app.js"></script>
 </body>
